feat: add audience profiles (--audience coding-agent|researcher|general)
Parameterize generation and evaluation prompts per target audience.
Three built-in profiles with tailored skill definitions, section
headings, extraction focus, and evaluation criteria overrides.
Configurable via --audience flag, config file, or auto-detect.

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -3,6 +3,10 @@
 
 provider: github  # "github", "copilot", "openai", or "litellm"
 
+# Target audience — changes how skills are extracted and evaluated
+# Options: "coding-agent" (default), "researcher", "general"
+audience: coding-agent
+
 # GitHub Models API (models.github.ai) — free tier with GitHub PAT
 github:
   model: openai/gpt-4o
